--- a/FrontEnd/E-com/src/components/Productdisplay/Productdisplay.css
+++ b/FrontEnd/E-com/src/components/Productdisplay/Productdisplay.css
@@ -63,12 +63,18 @@
     margin: 30px 0px;
     gap: 20px;
 }
-.sizes div{
+
+
+.sizes-opt{
     padding: 18px 24px;
     background: #fbfbfb;
     border: 1px solid #ebebeb;
     border-radius: 3px;
     cursor: pointer;
+}
+.sizes-opt.clicked{
+    background-color: black;
+    color: white;
 }
 .right button{
     padding: 20px 40px;
